feat: adiciona endpoint de regeneração de API Key da empresa
